--- a/index.html
+++ b/index.html
@@ -11,3 +11,29 @@
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
+
+<!-- 
+  
+  const names = ["alice", "bob", "charlie", "danielle"]
+//         ["Alice", "Bob", "Charlie", "Danielle"]
+// Your code here
+const capitalized = names.map(name => name[0].toUpperCase() + name.slice(1))
+
+or 
+
+const capitalized = names.map(name => (
+    name[0].toUpperCase() + name.slice(1))
+)
+
+https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map
+
+export default function App() {
+    const colors = ["Red", "Orange", "Yellow", "Green", "Blue", "Indigo", "Violet"]
+    const wraped = colors.map(color => <h3 key={color.toString()}>{color}</h3>)
+    return (
+        <div>
+            {wraped}
+        </div>
+    )
+}
+-->
